@@ -92,9 +92,11 @@ this repository contains the full copyright notices and license terms. -->
                             <field name="icon"/>
                             <newline/>
                             <label name="report"/>
-                            <field name="report" colspan="3"/>
+                            <field name="report"/>
                             <label name="report_content"/>
                             <field name="report_content"/>
+                            <label name="template_extension"/>
+                            <field name="template_extension"/>
                             <label name="extension"/>
                             <field name="extension"/>
                             <label name="style"/>
