@@ -1,3 +1,5 @@
+* Use unoconv for report format conversion
+* Allow to use any Opendocument as report template
 * Drop NetRPC and activate JSON-RPC by default
 * Remove ir.action.wizard_size
 * Rename expand and fill attributes into yexpand and yfill
